--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
 
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
 
   "keywords": [],
